--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
     width: 960px;
 }
 
-.box{
+.box, .select{
     height: 60px;
     width: 60px;
     box-sizing: border-box;
     border: 2px solid black;
+    background-color: aqua;
+}
+
+.select{
+    background-color: gray;
 }
