--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    display: flex;
+    flex-flow: column wrap;
+    gap: 2rem;
+    margin: 16px;
+    align-items: center;
+}
+
 .container{
     display: flex;
     flex-flow: row wrap;
@@ -14,4 +22,15 @@
 
 .select{
     background-color: gray;
+}
+
+button{
+    box-sizing: border-box;
+    height: 35px;
+    width: 200px;
+    background-color: red;
+    color: white;
+    font-size: 10px bold;
+    font-family: monospace;
+    border: 2px solid whitesmoke;
 }
