fix - fitting only 16 elements in a row
- previously width was set to pixels
- replace it with calc() to get the right number of boxes in a row

--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body{
 .container{
     display: flex;
     flex-flow: row wrap;
-    width: 960px;
+    max-width: 960px;
 }
 
 .box, .select{
     height: 60px;
-    width: 60px;
+    width: calc(100% * (1/16));
     box-sizing: border-box;
     border: 2px solid black;
     background-color: white;
