--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ body{
     display: flex;
     flex-flow: row wrap;
     max-width: 960px;
+    max-height: 960px;
 }
 
 .box, .select{
-    height: 60px;
-    width: calc(100% * (1/16));
+    aspect-ratio: 1/1;
+    width: calc(100% * (1/100));
     box-sizing: border-box;
     border: 2px solid black;
     background-color: white;
