--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ body{
 .container{
     display: flex;
     flex-flow: row wrap;
-    max-width: 960px;
-    max-height: 960px;
+    width: 960px;
 }
 
 .box, .select{
